2008-10-29  Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/37339
	* gcc.dg/pr33545-3.c: Remove.

2008-10-29  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	PR 11492
	* gcc.dg/pr11492.c: New.
	* g++.dg/warn/pr11492.C: New.

2008-10-29  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/36578
	* gcc.dg/dfp/convert-bfp-13.c, gcc.dg/dfp/convert-bfp-14.c,
	gcc.dg/dfp/convert-dfp-fold-2.c, gcc.target/i386/pr36578-1.c,
	gcc.target/i386/pr36578-2.c: New tests.

2008-10-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37870
	* gcc.target/i386/pr37870.c: New test.

2008-10-29  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/26997
	* g++.dg/parse/pr26997.C: New.

2008-10-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37913
	* gcc.c-torture/compile/pr37913.c: New test.

2008-10-28  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37663
	* gcc.dg/pr37663.c: Require int32plus.

	PR c/37924
	* gcc.c-torture/execute/pr37924.c: New test.

2008-10-28  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/dfp/convert-bfp-12.c: New test.

2008-10-28  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37931
	* gcc.c-torture/execute/pr37931.c: New test.

2008-10-27  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37879
	* gcc.dg/pr37879.c: New test.

2008-10-24  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/37841
	* gcc.target/spu/abi.c: New file.

2008-10-24  DJ Delorie  <dj@redhat.com>

	* lib/scanasm.exp (scan-assembler, scan-assembler-not,
	scan-hidden, scan-not-hidden, scan-file, scan-file-not,
	scan-assembler-times, scan-assembler-dem, scan-assembler-dem-not):
	Extract first word of $testcase for all upvar uses, in case
	$testvar has compiler switches appended.

2008-10-24  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/36038
	* gcc.c-torture/compile/pr36038.c: New test.

2008-10-24  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/7543
	* gcc.dg/Wparentheses-11.c: New.
	* g++.dg/warn/Wparentheses-25.C: New. XFAILED.
