@@ -1,3 +1,7 @@
+2008-10-29  David Edelsohn  <edelsohn@gnu.org>
+
+	* gcc.c-torture/compile/pr37878.c: New test.
+
 2008-10-29  Steve Ellcey  <sje@cup.hp.com>
 
 	PR middle-end/37339
